--- a/templates/static/style.css
+++ b/templates/static/style.css
@@ -40,3 +40,109 @@ canvas {
     top: 0;
     bottom: 0;
 }
+
+.vertical {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
+.horizontal {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+}
+
+.textbox {
+    border: 1px black solid;
+    width: 100%;
+    height: 100%;
+}
+
+.item-0 {
+    flex: 0;
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.item-1 {
+    flex: 1;
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.item-2 {
+    flex: 2;
+    width: 100%;
+    height: 100%;
+    position: static;
+}
+
+.item-3 {
+    flex: 3;
+    width: 100%;
+    height: 100%;
+    position: static;
+}
+
+.item-4 {
+    flex: 4;
+    width: 100%;
+    height: 100%;
+    position: static;
+}
+
+.item-5 {
+    flex: 5;
+    width: 100%;
+    height: 100%;
+    position: static;
+}
+
+.item-6 {
+    flex: 6;
+    width: 100%;
+    height: 100%;
+    position: static;
+}
+
+.main {
+    background: white;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+.btn {
+    width: 100%;
+    cursor: pointer;
+    border-top: #AAAAAA 1px solid;
+    border-left: #AAAAAA 1px solid;
+    border-bottom: black 1px solid;
+    border-right: black 1px solid;
+}
+
+.btn:hover {
+    text-underline: black;
+}
+
+.btn:active {
+    border: inset 1px;
+}
+
+.pad {
+    margin: 0.5em;
+    padding: 0.25em;
+    flex: 1
+}
+
+div {
+    background: linear-gradient(45deg, #e66465, #9198e5);
+}
+
+canvas {
+}
